// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
ERROR: (indent) /src/tslint/indent/test.ts[2, 1]: 2 space indentation expected

======
no error

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
if (true) {
	console.log(\\"1-tab\\");
}

======
if (true) {
  console.log(\\"1-tab\\");
}

>>>>>> after
"
`;
